# get-papers-list

./: README.md  pyproject.toml  report.md  result.csv
get_papers/: api.py  cli.py  filter.py  main.py  models.py
