[project]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = [
    {name = "tarleak613",email = "134609299+tarleak613@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry]
packages = [{ include = "get_papers" }]

[tool.poetry.scripts]
get-papers-list = "get_papers.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
